removed negtive z-index to prevent firefox issues
firefox does not seem to like negative z-indices

--- a/datkomm/style.scss
+++ b/datkomm/style.scss
@@ -69,7 +69,6 @@ p {
     background: #000000;
     transform: skewY(-5deg);
     font-size: 20px;
-    z-index: -5;
     color: #ffffff;
     font-family: 'Karla', sans-serif;
     margin-bottom: 4em;
